fix: broken style in production build

--- a/resources/assets/sass/partials/_shared.scss
+++ b/resources/assets/sass/partials/_shared.scss
@@ -43,8 +43,13 @@ input, select, button, textarea, .btn {
     display: block;
   }
 
-  &:focus { outline: none !important; }
-  &::-moz-focus-inner { border: 0 !important; }
+  &:focus {
+    outline: none !important;
+  }
+
+  &::-moz-focus-inner {
+    border: 0 !important;
+  }
 }
 
 button, [role=button] {
@@ -80,12 +85,12 @@ input[type="checkbox"] {
   height: 16px;
   margin: -4px 4px 0 0;
   outline: 0;
-  padding: 0!important;
+  padding: 0 !important;
   text-align: center;
   vertical-align: middle;
   width: 16px;
   min-width: 16px;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
   background: var(--color-text-primary);
 
   &:before {
